--- a/gui.lfm
+++ b/gui.lfm
@@ -1,8 +1,8 @@
-object Form1: TForm1
+object GameWindow: TGameWindow
   Left = 231
   Height = 240
   Top = 158
   Width = 320
-  Caption = 'Form1'
+  Caption = 'GameWindow'
   LCLVersion = '1.6.0.4'
 end
